tests/NormalTests/paczka1/fuzzy1/85996158.err
Error in line 8: zm7Pl S351 49,9
Error in line 15: zm7Pl S351 47,8
Error in line 7: S426 S646 78,5
Error in line 22: zm7Pl S426 5,7
Error in line 23: S426 S700 67,2
Error in line 27: zm7Pl S646 3,8
Error in line 18: PouibOQQ S426 48,1
Error in line 30: PouibOQQ S700 15,8
Error in line 31: lOH S646 72,2
Error in line 33: geaSE9 S351 91,0
